--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ h1 {letter-spacing: 6px}
 
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
+  <h1 class="w3-xlarge">ME STORE</h1>
   <h1>John Doe</h1>
   
   <div class="w3-padding-32">
