--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="/w3images/rocks.jpg" style="width:100%">
+    <img src="vvv.jpg" style="width:100%">
     <img src="/w3images/sound.jpg" style="width:100%">
     <img src="/w3images/woods.jpg" style="width:100%">
     <img src="/w3images/rock.jpg" style="width:100%">
