--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ img {margin-bottom: -7px}
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/mist.jpg" style="width:100%">
+    <img src="vvv.jpg" style="width:100%">
     <img src="/w3images/workbench.jpg" style="width:100%">
     <img src="/w3images/gondol.jpg" style="width:100%">
     <img src="/w3images/skies.jpg" style="width:100%">
