--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ img {margin-bottom: -7px}
     <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Photos</a>
     <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Shop</a>
     <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact</a>
+    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Sao</a>
   </div>
 </nav>
 
