--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ img {margin-bottom: -7px}
   <div class="w3-third">
     <img src="vvv.jpg" style="width:100%">
   <div class="w3-third">
-    <img src="3036.jpg" style="width:100%">
+    <img src="www.jpg" style="width:100%">
   </div>
 </div>
 
