--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@ img {margin-bottom: -7px}
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
 <div class="w3-clear"></div>
 <header class="w3-center w3-margin-bottom">
-  <h1><b>ME STORE</b></h1>
-  <p><b>by MewEye</b></p>
+  <img src="logo.jpg" style="width:50%">
+  <h1><b>THIS IS "ME"</b></h1>
+  <p><b>STORE</b></p>
+  
 
 </header>
 </div>
