--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ img {margin-bottom: -7px}
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
 <div class="w3-clear"></div>
 <header class="w3-center w3-margin-bottom">
-  <img src="logo.jpg" style="width:100%">
+  <img src="logo2.png" style="width:60%">
 </header>
 </div>
 
