--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('a.jpg');
+  background-image: <img src="a.jpg">
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -24,6 +24,9 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">menu</button></p>
     <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">contact</button></p>
+    <p><button onclick="document.getElementById('a').style.display='block'" class="w3-button w3-black">a</button></p>
+    <p><button onclick="document.getElementById('b').style.display='block'" class="w3-button w3-black">b</button></p>
+    <p><button onclick="document.getElementById('c').style.display='block'" class="w3-button w3-black">c</button></p>
   </div>
   <div class="w3-display-bottomleft w3-container">
     <p class="w3-xlarge">monday - friday 10-23 | saturday 14-02</p>
