--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body, html {height: 100%}
 </style>
 <body>
 
-<div class="bgimg w3-display-container w3-text-black">
+<div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
     <p>THIS'S ME</p>
   </div>
