--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@ body, html {height: 100%}
     <p>THIS'S ME</p>
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-white">menu</button></p>
-    <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-white">contact</button></p>
-    <p><button onclick="document.getElementById('a').style.display='block'" class="w3-button w3-white">a</button></p>
-    <p><button onclick="document.getElementById('b').style.display='block'" class="w3-button w3-white">b</button></p>
-    <p><button onclick="document.getElementById('c').style.display='block'" class="w3-button w3-white">c</button></p>
+    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">menu</button></p>
+    <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">contact</button></p>
+    <p><button onclick="document.getElementById('a').style.display='block'" class="w3-button w3-black">a</button></p>
+    <p><button onclick="document.getElementById('b').style.display='block'" class="w3-button w3-black">b</button></p>
+    <p><button onclick="document.getElementById('c').style.display='block'" class="w3-button w3-black">c</button></p>
   </div>b
   <div class="w3-display-bottomleft w3-container">
     <p class="w3-xlarge">monday - friday 10-23 | saturday 14-02</p>
-    <p class="w3-large">42 village St, New York</p>
+    <p class="w3-large">99 Bangkok St, Thailand</p>
     <p>powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </div>
 </div>
