--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ body, html {height: 100%}
 <div class="bgimg w3-display-container w3-text-black">
   <div class="w3-display-middle w3-jumbo">
     <p>THIS'S ME</p>
+    <p>Store</p>
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">menu</button></p>
@@ -31,7 +32,7 @@ body, html {height: 100%}
   <div class="w3-display-bottomleft w3-container">
     <p class="w3-xlarge">monday - friday 10-23 | saturday 14-02</p>
     <p class="w3-large">99 Bangkok St, Thailand</p>
-    <p>powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    
   </div>
 </div>
 
