--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body, html {height: 100%}
 <div class="bgimg w3-display-container w3-text-black">
   <div class="w3-display-middle w3-jumbo">
     <p>THIS'S ME</p>
-    <p><center>Store</center></p>
+    <p><center><h2>Store</h2></center></p>
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">menu</button></p>
