--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ body, html {height: 100%}
 <div class="bgimg w3-display-container w3-text-black">
   <div class="w3-display-middle w3-jumbo">
     <center><p>THIS'S ME</p></center>
-    <center><h6>Vintage Clothing Store</h6></center>
+    <center><h4>Vintage Clothing Store</h4></center>
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">menu</button></p>
-    <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">contact</button></p>
-    <p><button onclick="document.getElementById('a').style.display='block'" class="w3-button w3-black">a</button></p>
-    <p><button onclick="document.getElementById('b').style.display='block'" class="w3-button w3-black">b</button></p>
-    <p><button onclick="document.getElementById('c').style.display='block'" class="w3-button w3-black">c</button></p>
+    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
+    <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">product details</button></p>
+    <p><button onclick="document.getElementById('a').style.display='block'" class="w3-button w3-black">shopping cart</button></p>
+    <p><button onclick="document.getElementById('b').style.display='block'" class="w3-button w3-black">promotions</button></p>
+    <p><button onclick="document.getElementById('c').style.display='block'" class="w3-button w3-black">contact us</button></p>
   </div>b
   <div class="w3-display-bottomleft w3-container">
     <p class="w3-xlarge">monday - friday 10-23 | saturday 14-02</p>
