--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ body, html {height: 100%}
 <div class="bgimg w3-display-container w3-text-black">
   <div class="w3-display-middle w3-jumbo">
     <center><p>THIS'S ME</p></center>
-    <center><h4>Vintage Clothing Store</h4></center>
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
@@ -37,10 +36,10 @@ body, html {height: 100%}
 </div>
 
 <!-- Menu Modal -->
-<div id="menu" class="w3-modal">
+<div id="product catalog" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+      <span onclick="document.getElementById('product catalog').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
       <h1>Starters</h1>
     </div>
     <div class="w3-container">
