--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ body, html {height: 100%}
 </div>
 
 <!-- Menu Modal -->
-<div id="product catalog" class="w3-modal">
+<div id="Menu" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('product catalog').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+      <span onclick="document.getElementById('menu').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
       <h1>Starters</h1>
     </div>
     <div class="w3-container">
