--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body, html {height: 100%}
 </div>
 
 <!-- Menu Modal -->
-<div id="Menu" class="w3-modal">
+<div id="menu" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
       <span onclick="document.getElementById('menu').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
