--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <h5>Tomato Soup <b>$2.50</b></h5>
+      <img src="vvv.jpg" style="width:100%">
       <h5>Chicken Salad <b>$3.50</b></h5>
       <h5>Bread and Butter <b>$1.00</b></h5>
     </div>
