--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ body, html {height: 100%}
       <h1>Shirts</h1>
     </div>
     <div class="w3-container">
-      <h5>Tomato Soup <b>$2.50</b></h5>
       <img src="vvv.jpg" style="width:50%">
+      <h5>No.01-1 Plaid Shirt <b>$2.50</b></h5>
       <h5>Chicken Salad <b>$3.50</b></h5>
       <h5>Bread and Butter <b>$1.00</b></h5>
     </div>
