--- a/index.html
+++ b/index.html
@@ -51,13 +51,31 @@ body, html {height: 100%}
       <h5>Bread and Butter <b>$1.00</b></h5>
     </div>
     <div class="w3-container w3-black">
-      <h1>Skirts&Pants</h1>
+      <h1>Skirts</h1>
     </div>
     <div class="w3-container">
+      <img src="vvv.jpg" style="width:50%">
       <h5>Grilled Fish and Potatoes <b>$8.50</b></h5>
+      <img src="vvv.jpg" style="width:50%">
       <h5>Italian Pizza <b>$5.50</b></h5>
       <h5>Veggie Pasta <b>$4.00</b></h5>
       <h5>Chicken and Potatoes <b>$6.50</b></h5>
+      <h5>Deluxe Burger <b>$5.00</b></h5>
+    </div>
+    
+     <div class="w3-container w3-black">
+      <h1>Pants</h1>
+    </div>
+    <div class="w3-container">
+      <img src="a.jpg" style="width:50%">
+      <h5>Grilled Fish and Potatoes <b>$8.50</b></h5>
+      <img src="b.jpg" style="width:50%">
+      <h5>Italian Pizza <b>$5.50</b></h5>
+      <img src="c.jpg" style="width:50%">
+      <h5>Veggie Pasta <b>$4.00</b></h5>
+      <img src="d.jpg" style="width:50%">
+      <h5>Chicken and Potatoes <b>$6.50</b></h5>
+      <img src="e.jpg" style="width:50%">
       <h5>Deluxe Burger <b>$5.00</b></h5>
     </div>
     <div class="w3-container w3-black">
