--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body, html {height: 100%}
       <h1>Pants</h1>
     </div>
     <div class="w3-container">
-      <img src="a.jpg" style="width:50%">
+      <img src="a.jpg" style="width:50%"> <img src="a.jpg" style="width:50%"> 
       <h5>Grilled Fish and Potatoes <b>$8.50</b></h5>
       <img src="b.jpg" style="width:50%">
       <h5>Italian Pizza <b>$5.50</b></h5>
