--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@ body, html {height: 100%}
 <div id="menu" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      
-    <div class="w3-container w3-black">
-      <h1>Pants</h1>
+      <span onclick="document.getElementById('menu').style.display='none'" 
+      class="w3-button w3-display-topright w3-large">x</span>
+      <h1>เสื้อ</h1>
     </div>
     <div class="w3-container
       <img src="01.jpg" style="width:50%">
