--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body, html {height: 100%}
       
     </div>
     <div class="w3-container">
-      <img src="01.jpg" style="width:50%">
+      <center><img src="01.jpg" style="width:50%"></center>
       <h5>NO.<b>01-1</b></h5>
       <img src="02.jpg" style="width:50%">
       <h5>NO.<b>01-2</b></h5>
