--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <center><img src="01.jpg" style="width:50%"></center>
-      <h5>NO.<b>01-1</b></h5>
-      <img src="02.jpg" style="width:50%">
-      <h5>NO.<b>01-2</b></h5>
-      <img src="03.jpg" style="width:50%">
-      <h5>NO.<b>01-3</b></h5>
-      <img src="04.jpg" style="width:50%">
-      <h5>NO.<b>01-4</b></h5>
-      <img src="05.jpg" style="width:50%">
+      <center><h5>NO.<b>01-1</b></h5> </center>
+      <center><img src="02.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>01-2</b></h5></center>
+      <center><img src="03.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>01-3</b></h5></center>
+      <center><img src="04.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>01-4</b></h5></center>
+      <center><img src="05.jpg" style="width:50%"></center>
     </div>
     
      <div class="w3-container w3-black">
