--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body, html {height: 100%}
     <div class="w3-container w3-black w3-display-container">
       <span onclick="document.getElementById('menu').style.display='none'" 
       class="w3-button w3-display-topright w3-large">x</span>
-      <h2>Shirt</h2>
+      <h2>Shirt</h2> <style>{font-family: "Comic Neue", cursive}</style>
     </div>
     <div class="w3-container>
                 
@@ -60,6 +60,7 @@ body, html {height: 100%}
       <center><img src="04.jpg" style="width:50%"></center>
       <center><h5>NO.<b>01-4</b></h5></center>
       <center><img src="05.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>01-5</b></h5></center>
     </div>
     
      <div class="w3-container w3-black">
