--- a/index.html
+++ b/index.html
@@ -67,32 +67,32 @@ body, html {height: 100%}
       <h1>Pants</h1>
     </div>
     <div class="w3-container">
-      <img src="06.jpg" style="width:50%"> 
-      <h5>NO.<b>02-1</b></h5>
-      <img src="07.jpg" style="width:50%">
-      <h5>NO.<b>02-2</b></h5>
-      <img src="08.jpg" style="width:50%">
-      <h5>NO.<b>02-3</b></h5>
-      <img src="09.jpg" style="width:50%">
-      <h5>NO.<b>02-4</b></h5>
-      <img src="10.jpg" style="width:50%">
-      <h5>NO.<b>02-5</b></h5>
+      <center><img src="06.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>02-1</b></h5></center>
+      <center><img src="07.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>02-2</b></h5></center>
+      <center><img src="08.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>02-3</b></h5></center>
+      <center><img src="09.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>02-4</b></h5></center>
+      <center><img src="10.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>02-5</b></h5></center>
     </div>
                                         
      <div class="w3-container w3-black">
       <h1>skirt</h1>
     </div>
     <div class="w3-container">
-      <img src="a.jpg" style="width:50%"> 
-      <h5>NO.<b>03-1</b></h5>
-      <img src="b.jpg" style="width:50%">
-      <h5>NO.<b>03-2</b></h5>
-      <img src="c.jpg" style="width:50%">
-      <h5>NO.<b>03-3</b></h5>
-      <img src="d.jpg" style="width:50%">
-      <h5>NO.<b>03-4</b></h5>
-      <img src="e.jpg" style="width:50%">
-      <h5>NO.<b>03-5</b></h5>
+      <center><img src="a.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>03-1</b></h5></center>
+      <center><img src="b.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>03-2</b></h5></center>
+      <center><img src="c.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>03-3</b></h5></center>
+      <center><img src="d.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>03-4</b></h5></center>
+      <center><img src="e.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>03-5</b></h5></center>
     </div>                       
                                         
     <div class="w3-container w3-black">
