--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ body, html {height: 100%}
       <center><h5>NO.<b>04-4</b></h5></center>
       <center><img src="20.jpg" style="width:50%"></center>
       <center><h5>NO.<b>04-5</b></h5></center>
+    </div>                                            
                                                  
     <div class="w3-container w3-black">
       <h1Shoes</h1>
