--- a/index.html
+++ b/index.html
@@ -112,6 +112,22 @@ body, html {height: 100%}
     </div>
   </div>
 </div>
+                                                 
+<div class="w3-container w3-black">
+      <h1>Other</h1>
+    </div>
+    <div class="w3-container">
+      <h5>Fruit Salad <b>$2.50</b></h5>
+      <h5>Ice cream <b>$2.00</b></h5>
+      <h5>Chocolate Cake <b>$4.00</b></h5>
+      <h5>Cheese <b>$5.50</b></h5>
+    </div>
+  </div>
+</div>
+
+
+</body>
+</html>
   
   
 
