--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ body, html {height: 100%}
       <center><h5>NO.<b>03-5</b></h5></center>
     </div>       
                                                                    
-    <div class="w3-container w3-black">
-      <h1Shoes</h1>
+   <div class="w3-container w3-black">
+      <h1>Pants</h1>
     </div>
     <div class="w3-container">
       <center><img src="11.jpg" style="width:50%"></center>
