--- a/index.html
+++ b/index.html
@@ -93,20 +93,14 @@ body, html {height: 100%}
       <center><h5>NO.<b>03-5</b></h5></center>
     </div>       
                                                                    
-   <div class="w3-container w3-black">
-      <h1>Pants</h1>
+  <div class="w3-container w3-black">
+      <h1>Desserts</h1>
     </div>
     <div class="w3-container">
-      <center><img src="11.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>05-1</b></h5></center>
-      <center><img src="12.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>05-2</b></h5></center>
-      <center><img src="13.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>05-3</b></h5></center>
-      <center><img src="14.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>05-4</b></h5></center>
-      <center><img src="15.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>05-5</b></h5></center>
+      <h5>Fruit Salad <b>$2.50</b></h5>
+      <h5>Ice cream <b>$2.00</b></h5>
+      <h5>Chocolate Cake <b>$4.00</b></h5>
+      <h5>Cheese <b>$5.50</b></h5>
     </div>
   </div>
 </div>
