--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body, html {height: 100%}
       <center><h5>NO.<b>05-1</b></h5></center>
       <center><img src="22.jpg" style="width:50%"></center>
       <center><h5>NO.<b>05-2</b></h5></center>
-      <center><img src="1=23.jpg" style="width:50%"></center>
+      <center><img src="23.jpg" style="width:50%"></center>
       <center><h5>NO.<b>05-3</b></h5></center>
       <center><img src="24.jpg" style="width:50%"></center>
       <center><h5>NO.<b>05-4</b></h5></center>
