--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@ body, html {height: 100%}
       <center><img src="25.jpg" style="width:50%"></center>
       <center><h5>NO.<b>05-5</b></h5></center>
     </div>
+      
+      
+      <div class="w3-container w3-black">
+      <h1>Glasses</h1>
+    </div>
+    <div class="w3-container">
+      <center><img src="26.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>06-1</b></h5></center>
+      <center><img src="27.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>06-2</b></h5></center>
+      <center><img src="28.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>06-3</b></h5></center>
+      <center><img src="29.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>06-4</b></h5></center>
+      <center><img src="30.jpg" style="width:50%"></center>
+      <center><h5>NO.<b>06-5</b></h5></center>
+    </div>
     </div>
   </div>
 </div>
