--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@ body, html {height: 100%}
   
   
 
-  
-
-<!-- Contact Modal -->
+<!--  -->
 <div id="contact" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black">
@@ -175,12 +173,11 @@ body, html {height: 100%}
 </div>
  
   
-  
-    <!-- Menu Modal -->
-<div id="menu" class="w3-modal">
+    <!-- Contact Modal -->
+<div id="Contact" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+      <span onclick="document.getElementById('Contact').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
       <h1>Shirts</h1>
     </div>
     <div class="w3-container">
