--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, html {height: 100%}
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
+    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product details</button></p>
     <p><button onclick="document.getElementById('a').style.display='block'" class="w3-button w3-black">shopping cart</button></p>
     <p><button onclick="document.getElementById('b').style.display='block'" class="w3-button w3-black">promotions</button></p>
     <p><button onclick="document.getElementById('c').style.display='block'" class="w3-button w3-black">contact us</button></p>
