--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, html {height: 100%}
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product details</button></p>
+    <p><button onclick="document.getElementById('menu2').style.display='block'" class="w3-button w3-black">product details</button></p>
     <p><button onclick="document.getElementById('a').style.display='block'" class="w3-button w3-black">shopping cart</button></p>
     <p><button onclick="document.getElementById('b').style.display='block'" class="w3-button w3-black">promotions</button></p>
     <p><button onclick="document.getElementById('c').style.display='block'" class="w3-button w3-black">contact us</button></p>
@@ -145,10 +145,10 @@ body, html {height: 100%}
 </div>
      
   <!-- Menu Modal -->
-<div id="menu" class="w3-modal">
+<div id="menu2" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu').style.display='none'" 
+      <span onclick="document.getElementById('menu2').style.display='none'" 
       class="w3-button w3-display-topright w3-large">x</span>
       
     </div>
