--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body, html {height: 100%}
   </div>
 </div>
      
-  <!-- Menu Modal -->
+  <!-- Menu2 Modal -->
 <div id="menu2" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
