--- a/index.html
+++ b/index.html
@@ -156,9 +156,7 @@ body, html {height: 100%}
       <h1>Shirts details</h1>
     </div>
     <div class="w3-container">
-      <center><img src="01-1.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-1 Pastel T-shirt</b></h5> 
-      SIZE:s()</center>
+      <img src="01-1.jpg" style="width:50%"><h5>NO.<b>01-1 Pastel T-shirt</b></h5> 
       <center><img src="01-2.jpg" style="width:50%"></center>
       <center><h5>NO.<b>01-2</b></h5></center>
       <center><img src="01-3.jpg" style="width:50%"></center>
