--- a/index.html
+++ b/index.html
@@ -156,12 +156,7 @@ body, html {height: 100%}
       <h1>Shirts details</h1>
     </div>
     <div class="w3-container">
-      <img src="01-1.jpg" style="width:40%" align=left hspace="10" vspace="10"/> <h5>NO.<b>01-1 Pastel T-shirt
-      SIZE S() 
-      SIZE M() 
-      SIZE L() 
-      SIZE XL()
-      </b></h5> <br clear=left> 
+      <img src="01-1.jpg" style="width:40%" align=left hspace="10" vspace="10"/> <h5>NO.<b>01-1 Pastel T-shirt<br/>SIZE: S M L XL<br/>COLOR: </h5> <br clear=left> 
       <center><img src="01-2.jpg" style="width:50%"></center>
       <center><h5>NO.<b>01-2</b></h5></center>
       <center><img src="01-3.jpg" style="width:50%"></center>
