--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <center><img src="01-1.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-1</b>T-shirt<br/>size: S M L XL<br/>Color: Salmon,</h5></center>
+      <center><h5>NO.<b>01-1</b>T-shirt<br/>size: S M L XL<br/>Color: Salmon,White,Gray,Stone,Laurel Green</h5></center>
       <center><img src="01-2.jpg" style="width:50%"></center>
       <center><h5>NO.<b>01-2</b></h5></center>
       <center><img src="01-3.jpg" style="width:50%"></center>
