--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <center><img src="01-1.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-1</b> T-shirt<br/>size: S M L XL<br/>Color: Salmon,White,Gray,Stone,Laurel Green<br/>Price 200฿</h5></center>
+      <center><h5>NO.<b>01-1</b> T-shirt<br/>Size: XS S M L XL<br/>Color: Salmon,White,Gray,Stone,Laurel Green<br/>Price 200฿</h5></center>
       <center><img src="01-2.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-2</b></h5></center>
+      <center><h5>NO.<b>01-2</b> Plaid shirt<br/>Size: S M L XL<br/>Color: Black,White<br/>Price 300฿</h5></center>
       <center><img src="01-3.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-3</b></h5></center>
+      <center><h5>NO.<b>01-3</b> Cardigan<br/>Size: Freesize(Chest-42)<br/>Color: Tortilla,White,Ginger<br/>Price 350฿</h5></center>
       <center><img src="01-4.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-4</b></h5></center>
+      <center><h5>NO.<b>01-4</b> Sweater<br/>Size: Oversize<br/>Color: Black,Cedar,Cinnamon,Coral</h5></center>
       <center><img src="01-5.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-5</b></h5></center>
+      <center><h5>NO.<b>01-5</b> Vest<br/>Size: Freesize(Chest-40)<br/>Color: Fog,White,Black,Plum</b></h5></center>
     </div>
     
     <div class="w3-container w3-black">
