--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body, html {height: 100%}
     <div class="w3-container">
       <center><img src="01-1.jpg" style="width:50%"></center>
       <center><h5>NO.<b>01-1</b> T-shirt<br/>Size: XS S M L XL<br/>Color: Salmon,White,Gray,Stone,Laurel Green<br/>Price 200฿</h5></center>
-      <button onClick = “window.open(‘ไฟล์.html’)”> Add </button>
+      <center><button onClick = “menu.open(‘Shopping Cart.menu’)”> Add </button></center>
       <center><img src="01-2.jpg" style="width:50%"></center>
       <center><h5>NO.<b>01-2</b> Plaid shirt<br/>Size: S M L XL<br/>Color: Black,White<br/>Price 300฿</h5></center>
       <center><img src="01-3.jpg" style="width:50%"></center>
