--- a/index.html
+++ b/index.html
@@ -174,15 +174,15 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <center><img src="02-1.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>02-1</b></h5></center>
+      <center><h5>NO.<b>02-1</b> Vintage pants<br/>Size: Freesize(waist-31,hip-41)<br/>Color: Black,Gray,White,Khaki<br/>Price 400฿</h5></center>
       <center><img src="02-2.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>02-2</b></h5></center>
+      <center><h5>NO.<b>02-2</b> Vintage pants(Painted pattern)<br/>Size: Freesize(waist-31,hip-41)<br/>Color: Black,Rice<br/>Price 450฿</h5></center>
       <center><img src="02-3.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>02-3</b></h5></center>
+      <center><h5>NO.<b>02-3</b> Plaid pants<br/>Size: Freesize(waist-31,hip-41)<br/>Color: Brown,Gray<br/>Price 400฿</h5></center>
       <center><img src="02-4.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>02-4</b></h5></center>
+      <center><h5>NO.<b>02-4</b> Shorts<br/>Size: Freesize(waist-31,hip-41)<br/>Color: Cotton,Dijon<br/>Price 350฿</h5></center>
       <center><img src="02-5.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>02-5</b></h5></center>
+      <center><h5>NO.<b>02-5</b> trousers(Details)<br/>Size: Freesize(waist-34,hip-41)<br/>Color: Black,Cream</h5></center>
     </div>
                                         
     <div class="w3-container w3-black">
