--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ body, html {height: 100%}
       <center><img src="02-4.jpg" style="width:50%"></center>
       <center><h5>NO.<b>02-4</b> Shorts<br/>Size: Freesize(waist-31,hip-41)<br/>Color: Cotton,Dijon<br/>Price 350฿</h5></center>
       <center><img src="02-5.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>02-5</b> trousers(Details)<br/>Size: Freesize(waist-34,hip-41)<br/>Color: Black,Cream</h5></center>
+      <center><h5>NO.<b>02-5</b> trousers(Details)<br/>Size: Freesize(waist-34,hip-41)<br/>Color: Black,Cream<br/>Price 450฿</h5></center>
     </div>
                                         
     <div class="w3-container w3-black">
@@ -190,15 +190,15 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <center><img src="03-1.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>03-1</b></h5></center>
+      <center><h5>NO.<b>03-1</b> Vintage skirt<br/>Size: Freesize(waist-31,hip-41)<br/>Color: White,Cream<br/>Price 400฿</h5></center>
       <center><img src="03-2.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>03-2</b></h5></center>
+      <center><h5>NO.<b>03-2</b> Short skirt<br/>Size: S M L XL<br/>Color: Black,Cotton<br/>Price 350฿</h5></center>
       <center><img src="03-3.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>03-3</b></h5></center>
+      <center><h5>NO.<b>03-3</b> Corduroy skirt<br/>Size: S M L XL<br/>Color: Black,Brown<br/>Price: 450฿</h5></center>
       <center><img src="03-4.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>03-4</b></h5></center>
+      <center><h5>NO.<b>03-4</b> Skirt+belt<br/>Size: Freesize(waist-34,hip-41)<br/>Color: Black,Dijon,Big dip o'ruby,Cream<br/>Price 400฿</h5></center>
       <center><img src="03-5.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>03-5</b></h5></center>
+      <center><h5>NO.<b>03-5</b> Vintage skirt<br/>Size: S M L XL<br/>Color: Cream,Black<br/>Price 400฿</h5></center>
     </div>       
                                                                    
     <div class="w3-container w3-black">
