--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ body, html {height: 100%}
       <center><img src="03-2.jpg" style="width:50%"></center>
       <center><h5>NO.<b>03-2</b> Short skirt<br/>Size: S M L XL<br/>Color: Black,Cotton<br/>Price 350฿</h5></center>
       <center><img src="03-3.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>03-3</b> Corduroy skirt<br/>Size: S M L XL<br/>Color: Black,Brown<br/>Price: 450฿</h5></center>
+      <center><h5>NO.<b>03-3</b> Corduroy skirt<br/>Size: S M L XL<br/>Color: Black,Brown<br/>Price 450฿</h5></center>
       <center><img src="03-4.jpg" style="width:50%"></center>
       <center><h5>NO.<b>03-4</b> Skirt+belt<br/>Size: Freesize(waist-34,hip-41)<br/>Color: Black,Dijon,Big dip o'ruby,Cream<br/>Price 400฿</h5></center>
       <center><img src="03-5.jpg" style="width:50%"></center>
@@ -206,15 +206,15 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <center><img src="04-1.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>04-1</b></h5></center>
+      <center><h5>NO.<b>04-1</b> Weave shoes<br/>Size(EU): 35-41<br/>Color: Black,Pink,Blue,Red<br/>Price 390฿</h5></center>
       <center><img src="04-2.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>04-2</b></h5></center>
+      <center><h5>NO.<b>04-2</b> Weave shoes(Rope)<br/>Size(EU): 35-41<br/>Color: Cream,Pink,Blue,Black<br/>Price 490฿</h5></center>
       <center><img src="04-3.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>04-3</b></h5></center>
+      <center><h5>NO.<b>04-3</b> Vintage sneakers<br/>Size(EU): 35-42<br/>Color: Black,White,Yellow,Olive green,Blue<br/>Price 390฿</h5></center>
       <center><img src="04-4.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>04-4</b></h5></center>
+      <center><h5>NO.<b>04-4</b> Slippers<br/>Size(EU): 35-41<br/>Color: White,Cream,Pink,Dark spring green<br/>Price 290฿</h5></center>
       <center><img src="04-5.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>04-5</b></h5></center>
+      <center><h5>NO.<b>04-5</b> Boots<br/>Size(EU): 36-42<br/>Color: Black,Brown<br/>Price 790฿</h5></center>
       
     <div class="w3-container w3-black">
       <h1>Bags details</h1>
