--- a/index.html
+++ b/index.html
@@ -238,15 +238,15 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <center><img src="06-1.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>06-1</b></h5></center>
+      <center><h5>NO.<b>06-1</b> Vintage glasses<br/>Color: Black,Brown,Yellow<br/>Price 200฿</h5></center>
       <center><img src="06-2.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>06-2</b></h5></center>
+      <center><h5>NO.<b>06-2</b> Cateye glasses<br/>Color: Black+Beige,Black+Brown,Red+White<br/>Price 250฿</h5></center>
       <center><img src="06-3.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>06-3</b></h5></center>
+      <center><h5>NO.<b>06-3</b> Sunglasses<br/>Color: Black<br/>Price 250฿</h5></center>
       <center><img src="06-4.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>06-4</b></h5></center>
+      <center><h5>NO.<b>06-4</b> Vintage glasses<br/>Color: Red<br/>Price 200฿</h5></center>
       <center><img src="06-5.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>06-5</b></h5></center>
+      <center><h5>NO.<b>06-5</b> Vintage sunglasses<br/>Color: Brown<br/>Price 200฿</h5></center>
     </div>
     </div>
   </div>
