--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body, html {height: 100%}
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
     <p><button onclick="document.getElementById('menu2').style.display='block'" class="w3-button w3-black">product details</button></p>
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
+    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">on sale</button></p>
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">contact us</button></p>
   </div>b
   <div class="w3-display-bottomleft w3-container">
