--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
     <p><button onclick="document.getElementById('menu2').style.display='block'" class="w3-button w3-black">product details</button></p>
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">on sale</button></p>
+    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">place an order</button></p>
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">contact us</button></p>
   </div>b
   <div class="w3-display-bottomleft w3-container">
@@ -143,6 +143,13 @@ body, html {height: 100%}
     </div>
   </div>
 </div>
+  
+  <!-- Footer -->
+<footer class="w3-container w3-dark-grey" style="padding:32px">
+  <a href="#" class="w3-button w3-black w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
      
   <!-- Menu2 Modal -->
 <div id="menu2" class="w3-modal">
