--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body, html {height: 100%}
     <p><button onclick="document.getElementById('menu2').style.display='block'" class="w3-button w3-black">product details</button></p>
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">discounted product</button></p>
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">place an order</button></p>
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">contact us</button></p>
+    <p><button onclick="document.getElementById('menu4').style.display='block'" class="w3-button w3-black">contact us</button></p>
   </div>b
   <div class="w3-display-bottomleft w3-container">
     <p class="w3-xlarge">monday - friday 10-20 | saturday 14-23</p>
@@ -307,11 +307,11 @@ body, html {height: 100%}
   </div>
 </div>
 
- <!-- Menu Modal -->
-<div id="menu" class="w3-modal">
+ <!-- Menu4 Modal -->
+<div id="menu4" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu').style.display='none'" 
+      <span onclick="document.getElementById('menu4').style.display='none'" 
       class="w3-button w3-display-topright w3-large">x</span>
       
     </div>
