--- a/index.html
+++ b/index.html
@@ -289,19 +289,11 @@ body, html {height: 100%}
       
     </div>
      <div class="w3-container w3-black">
-      <h1>Shirts</h1>
+      <h1>Place an order</h1>
     </div>
     <div class="w3-container">
       <center><img src="01.jpg" style="width:50%"></center>
       <center><h5>NO.<b>01-1</b></h5> </center>
-      <center><img src="02.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-2</b></h5></center>
-      <center><img src="03.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-3</b></h5></center>
-      <center><img src="04.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-4</b></h5></center>
-      <center><img src="05.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-5</b></h5></center>
     </div>
     </div>
   </div>
@@ -321,14 +313,6 @@ body, html {height: 100%}
     <div class="w3-container">
       <center><img src="01.jpg" style="width:50%"></center>
       <center><h5>NO.<b>01-1</b></h5> </center>
-      <center><img src="02.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-2</b></h5></center>
-      <center><img src="03.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-3</b></h5></center>
-      <center><img src="04.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-4</b></h5></center>
-      <center><img src="05.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-5</b></h5></center>
     </div>
     </div>
   </div>
