--- a/index.html
+++ b/index.html
@@ -310,9 +310,11 @@ body, html {height: 100%}
      <div class="w3-container w3-black">
       <h1>contact us</h1>
     </div>
-    <div class="w3-container">
-      <center><img src="01.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-1</b></h5> </center>
+    <div class="w3-section">
+      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Chicago, US</p>
+      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+    </div>
     </div>
     </div>
   </div>
