--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ body, html {height: 100%}
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Location: 99 Bangkok St, Thailand</p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +66937096455</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: Thisisme@gmail.com</p>
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Facebook:  <a href="https://web.facebook.com/MEWSAOWA/">ไปที่ facebook</a></p>
+      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Facebook:  <a href="https://web.facebook.com/MEWSAOWA/">This's ME store</a></p>
     </div>
     </div>
   </div>
