--- a/index.html
+++ b/index.html
@@ -292,8 +292,12 @@ body, html {height: 100%}
       <h1>Place an order</h1>
     </div>
     <div class="w3-container">
-      <center><img src="01.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-1</b></h5> </center>
+      <center><h5>Name : <Input Type="text" size="15" maxlength="25"></h5></center>
+      <center><h5>Address : <Input Type="text" size="15" maxlength="50"></h5></center>
+      <center><h5>Phone number : <Input Type="text" size="15" maxlength="20"></h5></center><br/>
+      <center><h5>Product code : <Input Type="text" size="15" maxlength="50"></h5></center>
+      <center><h5>example:<b>01-1,04-2...</h5></center>  
+       
     </div>
     </div>
   </div>
