--- a/index.html
+++ b/index.html
@@ -292,12 +292,24 @@ body, html {height: 100%}
       <h1>Place an order</h1>
     </div>
     <div class="w3-container">
-      <center><h5>Name : <Input Type="text" size="15" maxlength="25"></h5></center>
-      <center><h5>Address : <Input Type="text" size="15" maxlength="50"></h5></center>
-      <center><h5>Phone number : <Input Type="text" size="15" maxlength="20"></h5></center><br/>
-      <center><h5>Product code : <Input Type="text" size="15" maxlength="50"></h5></center>
-      <center><h5>example:<b>01-1,04-2...</h5></center>  
-       
+      <h5>Name : <Input Type="text" size="15" maxlength="25"></h5>
+      <h5>Last name : <Input Type="text" size="15" maxlength="25"></h5>  
+      <h5>Email: <input type="text" name="email" size=13></h5>
+      <h5>Address : <Input Type="text" size="15" maxlength="50"></h5>
+      <h5>Phone number : <Input Type="text" size="15" maxlength="20"></h5><br/>
+      <h5>Product code : <Input Type="text" size="15" maxlength="50"></h5>
+      <h5>example:<b>01-1,04-2...</h5>
+      <Input type="submit" value="SEND" name="data">&nbsp;<Input type="reset" value="DELETE" name="data">
+      <h5>We will reply to you By your phone number and email within 5 minutes. "Thank you"</h5>
+      <SELECT>
+      <OPTION SELECTED>---Delivery channel---
+      <OPTION VALUE=1>REG
+      <OPTION VALUE=2>EMS
+      <OPTION VALUE=2>Kerry
+      <OPTION VALUE=2>J&T
+      <OPTION VALUE=2>Flash
+      </SELECT>
+      <h5>example:<b>01-1,04-2...</h5>
     </div>
     </div>
   </div>
