--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ body, html {height: 100%}
       <h5>Last name : <Input Type="text" size="15" maxlength="25"></h5>  
       <h5>Email: <input type="text" name="email" size=13></h5>
       <h5>Address : <Input Type="text" size="15" maxlength="50"></h5>
-      <h5>Phone number : <Input Type="text" size="15" maxlength="20"></h5><br/>
+      <h5>Phone number : <Input Type="text" size="15" maxlength="20"></h5>
       <h5>Product code : <Input Type="text" size="15" maxlength="50"></h5>
       <h5>example:<b>01-1,04-2...</h5>
       <SELECT>
@@ -305,7 +305,7 @@ body, html {height: 100%}
       <OPTION VALUE=2>EMS
       <OPTION VALUE=2>Kerry
       <OPTION VALUE=2>J&T
-      <OPTION VALUE=2>Flash
+      <OPTION VALUE=2>Flash<br/>
       <Input type="submit" value="SEND" name="data">&nbsp;<Input type="reset" value="DELETE" name="data">
       <h5>We will reply to you By your phone number and email within 5 minutes. "Thank you"</h5>
       </SELECT>
