--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
     <p><button onclick="document.getElementById('menu2').style.display='block'" class="w3-button w3-black">product details</button></p>
-    <p><button onclick="document.getElementById('menu3').style.display='block'" class="w3-button w3-black">discounted product</button></p>
+    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black"></button>product catalog</p>
     <p><button onclick="document.getElementById('menu5').style.display='block'" class="w3-button w3-black">place an order</button></p>
     <p><button onclick="document.getElementById('menu4').style.display='block'" class="w3-button w3-black">contact us</button></p>
   </div>b
@@ -253,11 +253,11 @@ body, html {height: 100%}
   </div>
 </div>
   
- <!-- Menu3 Modal -->
-<div id="menu3" class="w3-modal">
+ <!-- Menu Modal -->
+<div id="menu" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu3').style.display='none'" 
+      <span onclick="document.getElementById('menu').style.display='none'" 
       class="w3-button w3-display-topright w3-large">x</span>
       
     </div>
@@ -305,7 +305,7 @@ body, html {height: 100%}
       <OPTION VALUE=2>EMS
       <OPTION VALUE=2>Kerry
       <OPTION VALUE=2>J&T
-      <OPTION VALUE=2>Flash<br/>
+      <OPTION VALUE=2>Flash
       <Input type="submit" value="SEND" name="data">&nbsp;<Input type="reset" value="DELETE" name="data">
       <h5>We will reply to you By your phone number and email within 5 minutes. "Thank you"</h5>
       </SELECT>
