--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
     <p><button onclick="document.getElementById('menu2').style.display='block'" class="w3-button w3-black">product details</button></p>
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black"></button>product catalog</p>
+    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
     <p><button onclick="document.getElementById('menu5').style.display='block'" class="w3-button w3-black">place an order</button></p>
     <p><button onclick="document.getElementById('menu4').style.display='block'" class="w3-button w3-black">contact us</button></p>
   </div>b
@@ -306,9 +306,10 @@ body, html {height: 100%}
       <OPTION VALUE=2>Kerry
       <OPTION VALUE=2>J&T
       <OPTION VALUE=2>Flash
-      <Input type="submit" value="SEND" name="data">&nbsp;<Input type="reset" value="DELETE" name="data">
-      <h5>We will reply to you By your phone number and email within 5 minutes. "Thank you"</h5>
       </SELECT>
+      <h5>We will reply to you By your phone number and email within 5 minutes. "Thank you"</h5>
+      <Input type="submit" value="SEND" name="data">&nbsp;<Input type="reset" value="DELETE" name="data">
+      
       
     </div>
     </div>
