--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
     <p><button onclick="document.getElementById('menu2').style.display='block'" class="w3-button w3-black">product details</button></p>
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
+    <p><button onclick="document.getElementById('menu1').style.display='block'" class="w3-button w3-black">discounted product</button></p>
     <p><button onclick="document.getElementById('menu5').style.display='block'" class="w3-button w3-black">place an order</button></p>
     <p><button onclick="document.getElementById('menu4').style.display='block'" class="w3-button w3-black">contact us</button></p>
   </div>b
@@ -253,28 +253,21 @@ body, html {height: 100%}
   </div>
 </div>
   
- <!-- Menu Modal -->
-<div id="menu" class="w3-modal">
+ <!-- Menu1 Modal -->
+<div id="menu1" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu').style.display='none'" 
+      <span onclick="document.getElementById('menu1').style.display='none'" 
       class="w3-button w3-display-topright w3-large">x</span>
       
     </div>
      <div class="w3-container w3-black">
-      <h1>Shirts</h1>
+      <h1>SALE!!!</h1>
     </div>
     <div class="w3-container">
       <center><img src="01.jpg" style="width:50%"></center>
       <center><h5>NO.<b>01-1</b></h5> </center>
-      <center><img src="02.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-2</b></h5></center>
-      <center><img src="03.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-3</b></h5></center>
-      <center><img src="04.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-4</b></h5></center>
-      <center><img src="05.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-5</b></h5></center>
+     
     </div>
     </div>
   </div>
