--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
     <p><button onclick="document.getElementById('menu2').style.display='block'" class="w3-button w3-black">product details</button></p>
-    <p><button onclick="document.getElementById('menu1').style.display='block'" class="w3-button w3-black">discounted product</button></p>
+    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">discounted product</button></p>
     <p><button onclick="document.getElementById('menu5').style.display='block'" class="w3-button w3-black">place an order</button></p>
     <p><button onclick="document.getElementById('menu4').style.display='block'" class="w3-button w3-black">contact us</button></p>
   </div>b
