--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@ body, html {height: 100%}
   </div>
 </div>
   
- <!-- Menu1 Modal -->
-<div id="menu1" class="w3-modal">
+ <!-- Menu Modal -->
+<div id="menu" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu1').style.display='none'" 
+      <span onclick="document.getElementById('menu').style.display='none'" 
       class="w3-button w3-display-topright w3-large">x</span>
       
     </div>
