--- a/index.html
+++ b/index.html
@@ -258,18 +258,15 @@ body, html {height: 100%}
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
       <span onclick="document.getElementById('menu6').style.display='none'" 
-      class="w3-button w3-display-topright w3-large">x</span>
-      
+      class="w3-button w3-display-topright w3-large">x</span> 
     </div>
      <div class="w3-container w3-black">
-      <h1>SALE!!!</h1>
+      <h1>Place an order</h1>
     </div>
     <div class="w3-container">
-      <center><img src="01.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>01-1</b></h5> </center>
-     
-    </div>
-    </div>
+    <center><img src="06-1.jpg" style="width:50%"></center>
+    <center><h5>NO.<b>06-1</b> Vintage glasses<br/>Color: Black,Brown,Yellow<br/>Price 200฿</h5></center>
+   </div>
   </div>
 </div>
   
