--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ body, html {height: 100%}
       <OPTION VALUE=2>Flash
       </SELECT>
       <h5>We will reply to you By your phone number and email within 5 minutes. "Thank you"</h5>
-      <Input type="submit" value="SEND" name="data">&nbsp;<Input type="reset" value="DELETE" name="data"><br/>  
+      <Input type="submit" value="SEND" name="data">&nbsp;<Input type="reset" value="DELETE" name="data"> 
     </div>
     </div>
   </div>
