--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@ body, html {height: 100%}
   
 
   
-   <!-- Contact Modal -->
-<div id="contact" class="w3-modal">
+   <!-- place an order Modal -->
+<div id="place an order" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black">
-      <span onclick="document.getElementById('contact').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+      <span onclick="document.getElementById('place an order').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
       <h1>Contact</h1>
     </div>
     <div class="w3-container">
