--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@ body, html {height: 100%}
       <center><img src="30.jpg" style="width:50%"></center>
       <center><h5>NO.<b>06-5</b></h5></center>
     </div>
+    </div>
   </div>
 </div>
+  
 
   
 
@@ -249,6 +251,7 @@ body, html {height: 100%}
       <center><h5>NO.<b>06-4</b> Vintage glasses<br/>Color: Red<br/>Price 200฿</h5></center>
       <center><img src="06-5.jpg" style="width:50%"></center>
       <center><h5>NO.<b>06-5</b> Vintage sunglasses<br/>Color: Brown<br/>Price 200฿</h5></center>
+    </div>
     </div>
   </div>
 </div>
