--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ body, html {height: 100%}
       
     </div>
      <div class="w3-container w3-black">
-      <h1>SALE!!!</h1>
+       <font color="red"><h1>SALE!!!</h1></font>
     </div>
     <div class="w3-container">
       <center><img src="01.jpg" style="width:50%"></center>
